# AI-Innovation-Phase-1

./: .gitignore  README.md  main.py  pyproject.toml
scripts/: generate_metadata.py  upload_to_s3.py
src/: app.py  rag_engine.py
