[project]
name = "ms-regulations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.8",
    "pandas>=2.3.3",
    "pathlib>=1.0.1",
    "pdfplumber>=0.11.8",
    "streamlit>=1.52.1",
    "tiktoken>=0.12.0",
]
